examples/v0.5/errors/ternary_condition_not_boolean.nova
value: S = (
    123
        ? "A"
        : "B"
)

// Expected Error:
// Condition must evaluate to a Boolean value.